Fixes input icons alignment.

--- a/public/sass/components/components.chat.scss
+++ b/public/sass/components/components.chat.scss
@@ -108,8 +108,8 @@
     color: var(--color-secondary); // to be picked up from currentColor
     width: 3rem;
     height: 3rem;
-    bottom: 0.6rem;
-    right: 1.1rem;
+    top: .5rem;
+    right: .5rem;
 
     svg {
       path {
