--- a/public/sass/components/components.form.scss
+++ b/public/sass/components/components.form.scss
@@ -21,6 +21,10 @@
     opacity: .5;
     font-style: italic;
   }
+
+  &--with-icon {
+    padding-right: 3.5rem;
+  }
 }
 
 .c-input-oval {
